# Onboarder

./: README.md
extension/: content.js  manifest.json  popup-input.css  popup-output.css  popup.html  popup.js
server/onboarder-server/: .gitignore  Cargo.toml  explore.rest  gen-certs.ps1  icon.xcf  openssl.cnf  start.ps1
server/onboarder-server/examples/: readkey.rs  tray.rs  tray_and_web.rs  unicode.rs  unicode_echo.rs  wt.rs  ytdlp_filename.rs  ytdlp_filename_async.rs
server/onboarder-server/notes/: [2023-09-01] [youtube] [HdYamt9zWR8] Ghostrunner Developers React to 34 Minute Speedrun.txt  [2023-09-03] [youtube] [HdYamt9zWR8] Ghostrunner Developers React to 34 Minute Speedrun.txt  beans.txt  my note id.txt
server/onboarder-server/src/: main.rs
server/transcription/: .gitignore  Get-HuggingFaceToken.ps1  Run.ps1  main.py  old_Run.ps1  pyproject.toml
