[package]
name = "onboarder-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["full"] }
hyper-rustls = "0.24.1"
percent-encoding = "2.3.0"
rustls = "0.21.7"
rustls-pemfile = "1.0.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
structopt = "0.3.26"
tokio = { version = "1.32.0", features = ["full"] }
tokio-rustls = "0.24.1"
url = "2.4.1"
